--- a/html/css/main.css
+++ b/html/css/main.css
@@ -180,6 +180,9 @@ a {
     /*background: linear-gradient(135deg, rgba(var(--color-gray-1), .1), rgba(var(--color-gray-1), .0));*/
 }
 
+.close-accessibility {
+    transform: translateX(-100%);
+}
 
 @tailwind components;
 @tailwind utilities;
